message BloomTopics {
    repeated int32 topics = 1;
}

message PeerMessage {

    enum Type {
        ProducerProposal = 1;
        BuySellOrder = 2;
    }

    required Type messageType = 1;
    required bytes signature = 2;
    required uint64 timestamp = 3;
    required bytes messageBytes = 4;
    required bytes signer = 5;
}

message ProducerProposal {

    message ProposalDetails {

        message ProjectDescription {
            optional Range projectedDates = 1;
            optional string info = 2;
            required Location loc = 3;
        }

        message Range {
            required uint64 min = 1;
            required uint64 max = 2;
        }

        message Location {
            optional float lat = 1;
            optional float long = 2;
            optional string city = 3;
            required string country = 4;
            required uint32 isoNumeric3countryCode = 5;
        }

        optional Range fundingNeeds = 1;
        optional ProjectDescription description = 2;
        required string assetCode = 3;
    }

    required bytes producer = 1;
    required ProposalDetails details = 2;
}

message BuySellOrder {

    message CodeAndQty {
        required string tokenCode = 1;
        required uint64 quantity = 2;
    }

    optional CodeAndQty token1 = 1;
    optional CodeAndQty token2 = 2;
    repeated bytes publicKeys = 3;
    repeated uint64 nonces = 4;
    repeated bytes signatures = 5;

    required bool isBuyOrder = 6;
    required bytes id = 7;
    required uint64 timestamp = 8;
}